--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,30 +1,54 @@
 name: Release New Version
-
-# Triggers the workflow when a push happens
 on:
   push:
     branches:
       - main
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
-  release:
+  release-please:
     runs-on: ubuntu-latest
-
-    name: Release
-
     steps:
-      - name: Fetch Git entire history for all branches and tags
-        uses: actions/checkout@v4
+      - uses: google-github-actions/release-please-action@v4
         with:
-          fetch-depth: 0
+          # this assumes that you have created a personal access token
+          # (PAT) and configured it as a GitHub action secret named
+          # `MY_RELEASE_PLEASE_TOKEN` (this secret name is not important).
+          token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+          # this is a built-in strategy in release-please, see "Action Inputs"
+          # for more options
+          release-type: simple
 
-      - name: Use Node v18
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+# name: Release New Version
 
-      - name: Install Dependencies
-        run: npm install
+# # Triggers the workflow when a push happens
+# on:
+#   push:
+#     branches:
+#       - main
 
-      - name: Run Semantic Release
-        run: nxp semantic release
+# jobs:
+#   release:
+#     runs-on: ubuntu-latest
+
+#     name: Release
+
+#     steps:
+#       - name: Fetch Git entire history for all branches and tags
+#         uses: actions/checkout@v4
+#         with:
+#           fetch-depth: 0
+
+#       - name: Use Node v18
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+
+#       - name: Install Dependencies
+#         run: npm install
+
+#       - name: Run Semantic Release
+#         run: nxp semantic release
