--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -5,5 +5,6 @@
   "draft": false,
   "skip-github-release": true,
   "pull-request-title-pattern": "chore${scope}: release${component} ${version}",
-  "prerelease": true
+  "prerelease": true,
+  ".": "0.0.0"
 }
