--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release New Version
+name: Build
 on:
   push:
     branches:
@@ -9,25 +9,36 @@ permissions:
   pull-requests: write
 
 jobs:
-  release-please:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v4
-        id: release
+      - name: Fetch Git entire history for all branches and tags
+        uses: actions/checkout@v4
         with:
-          # this assumes that you have created a personal access token
-          # (PAT) and configured it as a GitHub action secret named
-          # `MY_RELEASE_PLEASE_TOKEN` (this secret name is not important).
-          token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
-          # this is a built-in strategy in release-please, see "Action Inputs"
-          # for more options
-          release-type: simple
-          config-file: release-please-config.json
-          manifest-file: .release-please-manifest.json
-      - name: Test build
-        if: ${{ steps.release.outputs.release_created }}
-        run: |
-          echo "THIS IS THE PACKAGE THAT WILL BE BUILT : ${{ steps.release.outputs.tag_name }}"
+          fetch-depth: 0
+      - uses: arduino/setup-task@v2
+        with:
+          version: 3.x
+          repo-token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+      - run: task current
+      - run: task build
+    
+      # - uses: google-github-actions/release-please-action@v4
+      #   id: release
+      #   with:
+      #     # this assumes that you have created a personal access token
+      #     # (PAT) and configured it as a GitHub action secret named
+      #     # `MY_RELEASE_PLEASE_TOKEN` (this secret name is not important).
+      #     token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+      #     # this is a built-in strategy in release-please, see "Action Inputs"
+      #     # for more options
+      #     release-type: simple
+      #     config-file: release-please-config.json
+      #     manifest-file: .release-please-manifest.json
+      # - name: Test build
+      #   if: ${{ steps.release.outputs.release_created }}
+      #   run: |
+      #     echo "THIS IS THE PACKAGE THAT WILL BE BUILT : ${{ steps.release.outputs.tag_name }}"
           
 
 # name: Release New Version
