--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
       - uses: DeterminateSystems/nix-installer-action@main
         with:
-          flakehub: true
+          flakehub: false
       - run: nix build .
       # - uses: arduino/setup-task@v2
       #   with:
