--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,10 +16,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: cachix/install-nix-action@v25
         with:
-          flakehub: false
-      - run: nix build .
+          nix_path: nixpkgs=channel:nixos-unstable
+      - run: nix-build
+
+      # - uses: DeterminateSystems/nix-installer-action@main
+      #   with:
+      #     flakehub: false
+      # - run: nix build .
       # - uses: arduino/setup-task@v2
       #   with:
       #     version: 3.x
