--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,22 +16,26 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: cachix/install-nix-action@v25
-        with:
-          nix_path: nixpkgs=channel:nixos-unstable
-      - run: nix-build
+      # - uses: cachix/install-nix-action@v25
+      #   with:
+      #     nix_path: nixpkgs=channel:nixos-unstable
+      # - run: nix-build
 
       # - uses: DeterminateSystems/nix-installer-action@main
       #   with:
       #     flakehub: false
       # - run: nix build .
-      # - uses: arduino/setup-task@v2
-      #   with:
-      #     version: 3.x
-      #     repo-token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
-      - run: nix-shell --run "task version"
-      - run: nix-shell --run "task build"
-    
+      - uses: arduino/setup-task@v2
+        with:
+          version: 3.x
+          repo-token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+      - run: |
+          echo 'deb [trusted=yes] https://apt.fury.io/caarlos0/ /' | sudo tee /etc/apt/sources.list.d/caarlos0.list
+          sudo apt update
+          sudo apt install svu
+      - run: task version
+      - run: task build
+  
       # - uses: google-github-actions/release-please-action@v4
       #   id: release
       #   with:
