chore: setup goreleaser2

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -8,12 +8,14 @@
 
 version: 1
 
-before:
-  hooks:
     # You may remove this if you don't use go modules.
     #- go mod tidy
     # you may remove this if you don't need go generate
     #- go generate ./...
+
+release:
+  prerelease: auto
+
 builds:
 - skip: true
 dist: releaser
